--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,14 @@
   url = {https://CRAN.R-project.org/package=bibtex},
 }
 
+@Manual{bindrcpp,
+  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
+  author = {Kirill Müller},
+  year = {2017},
+  note = {R package version 0.2},
+  url = {https://CRAN.R-project.org/package=bindrcpp},
+}
+
 @Manual{broom,
   title = {broom: Convert Statistical Analysis Objects into Tidy Data Frames},
   author = {David Robinson},
@@ -69,6 +77,14 @@
   year = {2017},
   note = {R package version 2.1.3},
   url = {https://CRAN.R-project.org/package=gbm},
+}
+
+@Manual{GGally,
+  title = {GGally: Extension to 'ggplot2'},
+  author = {Barret Schloerke and Jason Crowley and Di Cook and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Joseph Larmarange},
+  year = {2017},
+  note = {R package version 1.3.2},
+  url = {https://CRAN.R-project.org/package=GGally},
 }
 
 @Manual{ggmosaic,
@@ -222,6 +238,14 @@ Vim},
   year = {2017},
   note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=readr},
+}
+
+@Manual{rmarkdown,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
+  year = {2017},
+  note = {R package version 1.6},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{splines,
