--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -55,15 +55,6 @@
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
-@Manual{e1071,
-  title = {e1071: Misc Functions of the Department of Statistics, Probability
-Theory Group (Formerly: E1071), TU Wien},
-  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
-  year = {2017},
-  note = {R package version 1.6-8},
-  url = {https://CRAN.R-project.org/package=e1071},
-}
-
 @Manual{forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
@@ -237,7 +228,7 @@ Vim},
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2017},
-  note = {R package version 0.2.2.2},
+  note = {R package version 0.2.3},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
@@ -258,14 +249,6 @@ Vim},
   year = {2017},
   note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=readr},
-}
-
-@Manual{rmarkdown,
-  title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
-  year = {2017},
-  note = {R package version 1.6},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{splines,
@@ -306,15 +289,15 @@ Vim},
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2017},
-  note = {R package version 1.3.3},
+  note = {R package version 1.3.4},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{tidyr,
   title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
-  author = {Hadley Wickham},
+  author = {Hadley Wickham and Lionel Henry},
   year = {2017},
-  note = {R package version 0.6.3},
+  note = {R package version 0.7.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
